# cheapbin

./: CMakeLists.txt  GKD.md  Makefile  Makefile.sdl  README.md  task.md
src/: analyzer.c  analyzer.h  audio.c  audio.h  audio_linux.c  binview.c  binview.h  chipemu.c  chipemu.h  composer.c  composer.h  display.c  display.h  display_internal.h  main.c  re_data.h  reader.c  reader.h  style.c  style.h  synth.c  synth.h  theme.c  theme.h  theme_default.c  theme_softice.c  theme_td32.c
src/sdl/: audio_alsa.c  audio_sdl.c  cheapbin.gxmenu  font8x8.h  launcher.sh  sdl_app.c  sdl_app.h  sdl_display.c  sdl_display.h  sdl_include.h  sdl_main.c  sdl_web_main.c  web_shell.html
